# fastapi_autocomplete

./: Makefile  main.py  pyproject.toml
app/controllers/: controllers.py
app/data/: municipios.json
app/routes/: autocomplete.py
infra/: Dockerfile
tests/controllers/: test_controllers.py
